New in 0.8.0:
- Add support for regular expressions in the editing mode (see help).
- Use the same output for date and time in both raw dump and edit mode.
- (usability issue pointed out by Sebastian Thomas. Thanks!)

New in 0.6.7:
- When a login is terminated by a system halt or reboot print 'down' as logout time.
- Correctly display login times with negative values.

New in 0.6.6:
- The cleaning of the wtmp records no longer leaves any trace, even in the raw output.
- The listing of user logins was improved.

New in 0.6.5:
- The raw ('--raw') output was highly improved.
- The whole wtmp database is dumped if no user is specified.
- An error code of 1 is returned if the editing of the wtmp file fails.
- Unknown fake users are not accepted when patching the wtmp file.
- Timestamps are always preserved when editing the wtmp file (the '--preserve' option
  has been removed).

New in 0.6.4:
- Now it's possible to replace a user logged at a given time or in all the records of
  the wtmp batabase with another one.

New in 0.6.3:
- Print the list of user sessions formatting the data as `last' does.
- New option '-t' (or '--time') to delete a login occurred at a specified time.
- Report "gone - no logout" if the login process is not alive.

New in 0.6.2:
- Print the list of all users logged in and out with session length in `--list' mode.
- Fixed all the gcc warnings when complitling with "-pedantic" and "-ansi" flags.

New in 0.6.1:
- configure: Check if the POSIX.1-2001 functions for managing utmp files are available.
- Small changes to support the AIX platform.

New in 0.6:
- Added `-l|--list' option to list the <user> logins with terminal and date.
- Removed `-t|--test' and `-u|--user' command-line options.
- Use the POSIX.1-2001 functions declared in <utmpx.h> to support non-Linux systems.
- When cleaning up a block also fill with zeros `ut_host' and `ut_addr_v6'.

New in 0.5:
- Support GNU command-line long options.